<resources>
    <string name="language_manager">Language manager</string>
    <string name="settings">Settings</string>
    <string name="upload_dict_btt">Upload</string>
    <string name="loading">Loading... %1$s</string>
    <string name="done">done</string>
    <string name="delete_dictionary">Delete dictionary?</string>
    <string name="delete_dict_btt">Delete dictionary</string>
    <string name="from_language">From :</string>
    <string name="to_language">To :</string>
    <string name="source_language_first">Select source language first</string>
    <string name="upload_dictionary_first">Upload dictionary first</string>
    <string name="search">Search</string>
    <string name="no_translation">No translation</string>
    <string name="select_dictionaries_to_upload">Select dictionaries to upload:</string>
    <string name="you_have_to_upload">You have to upload at least one dictionary</string>
    <string name="uploaded_dictionaries">Uploaded dictionaries:</string>
    <string name="close">Close</string>
    <string name="dictionaries_spinner">dictionaries_Spinner</string>

</resources>