<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:orderInCategory="1"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/language_manager"
        android:orderInCategory="2"
        android:title="@string/language_manager"
        app:showAsAction="never" />
    <item
        android:id="@+id/dictionaries_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:spinnerMode="dropdown"
        android:textColor="@color/black"
        android:title="@string/dictionaries_spinner"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />


</menu>